sumo/tests/traci/Scenario/DomRoadMap/InvalidVariableId/errors.traci
Error: Answered with error to command 115: Unknown domain variable specified
Error while receiving command: tcpip::Socket::receive() @ recv: No error
Error while sending command: send failed: Software caused tcpip::Socket abort
